@@ -13,7 +13,7 @@
 	<RULES ESCAPE="\"
 		IGNORE_CASE="TRUE"
 		HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="[[:digit:]]?(pt|pc|in|mm|cm|em|ex|px|ms|s|%)"
+		DIGIT_RE="[[:digit:]]+(pt|pc|in|mm|cm|em|ex|px|ms|s|%)"
 		NO_WORD_SEP="-">
 
 		<SEQ TYPE="OPERATOR">:</SEQ>
